--- a/index.html
+++ b/index.html
@@ -235,77 +235,72 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-6" style="flex-basis: 48%;">
           <div class="col  justify-content-center"><h3 class="">Our Projects</h3><p>&nbsp</p></div>
           <div class="row">
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
               <a href="#consentium" class="open-popup-link"><img src="img/client-consentium.png" alt=""></a>
             </div>
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
                <a href="#cloudmoolah" class="open-popup-link"><img src="img/client-cm.png" alt=""></a>
             </div>
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
               <a href="#wgp" class="open-popup-link"><img src="img/client-wgp.png" alt=""></a>
             </div>
           </div>
-
-          <div class="row mt-4">
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+          <div class="row">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
               <a href="#solarite" class="open-popup-link"><img src="img/client-solarite.png" alt=""></a>
             </div>
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
                <a href="#reditus" class="open-popup-link"><img src="img/client-reditus2.png" alt=""></a>
             </div>
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
               <a href="#bountie" class="open-popup-link"><img src="img/client-bountie.png" alt=""></a>
             </div>
           </div>
-
           <div class="row">
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
                <a href="#kozjin" class="open-popup-link"><img style="width: 50%" src="img/client-kozjin.png" alt=""></a>
             </div>
-             <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+             <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
                <a href="#wowx" class="open-popup-link"><img style="width: 50%" src="img/client-wowx.png" alt=""></a>
             </div>
-            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo">
+            <div class="col-md-4 col-sm-4 col-4 v-pad client-logo my-auto">
                <a href="#race" class="open-popup-link"><img style="width: 50%" src="img/client-race.png" alt=""></a>
             </div>
-        
           </div>
-
         </div>
 
         <div class="col-1" style="background-color: rgb(76, 77, 79); width: 1px; max-width: 0.1%; padding-left: 0px; padding-right: 0px;"></div>
 
-        <div class="col-6" style="flex-basis: 48%;">
+        <div class="col-6 ml-3" style="flex-basis: 48%;">
           <div class="col justify-content-center"><h3 class="">Track Record</h3><p class="white-text">As of October 2019</p></div>
           <div class="row mt-5" >
-            <div class="col-md-6 col-sm-6 col-6 client-logo">
-                <h3>US$200M+</h3>
-                <p class="white-text mt-1">Raised for 17 ICO projects since 2017</p>
+            <div class="col-md-6 col-sm-6 col-6 client-logo my-auto" style="height:68px;">
+              <h3>US$200M+</h3>
+              <p class="white-text mt-1">Raised for 17 ICO projects since 2017</p>
             </div>
-            <div class="col-md-6 col-sm-6 col-6 client-logo">
-		<h3>54,682</h3>
-                <p class="white-text mt-1">Token holders</p>
+            <div class="col-md-6 col-sm-6 col-6 client-logo my-auto" style="height:68px;">
+		          <h3>54,682</h3>
+              <p class="white-text mt-1">Token holders</p>
             </div>
           </div>
           <div class="row mt-5">
-            <div class="col-md-6 col-sm-6 col-6 client-logo">
-		<h3>US$689M+</h3>
-                <p class="white-text mt-1">Total market cap</p>
+            <div class="col-md-6 col-sm-6 col-6 client-logo my-auto" style="height:68px;">
+		          <h3>US$689M+</h3>
+              <p class="white-text mt-1">Total market cap</p>
             </div>
-            <div class="col-md-6 col-sm-6 col-6 client-logo">
+            <div class="col-md-6 col-sm-6 col-6 client-logo my-auto" style="height:68px;">
               <h3>4.6+ ratings</h3>
-                <p class="white-text mt-1">on average across projects led (ICOBench)</p>
+              <p class="white-text mt-1">on average across projects led (ICOBench)</p>
             </div>
           </div>
-
           <div class="row mt-5">
-            <div class="col-md-6 col-sm-6 col-6 client-logo">
+            <div class="col-md-6 col-sm-6 col-6 client-logo my-auto" >
               <h3>58 projects</h3>
-                <p class="white-text mt-1">consulted and led</p>
+              <p class="white-text mt-1">consulted and led</p>
             </div>
-            <div class="col-md-6 col-sm-6 col-6 client-logo">
-               <h3>121.70+ </h3>
-                <p class="white-text mt-1">ICO success score</p>
+            <div class="col-md-6 col-sm-6 col-6 client-logo my-auto">
+              <h3>121.70+ </h3>
+              <p class="white-text mt-1">ICO success score</p>
             </div>
           </div>
 
