Update teams: delete vincent and jordan

--- a/index-kr.html
+++ b/index-kr.html
@@ -460,7 +460,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>General Counsel</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+      <!-- <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#jeremy" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-jeremy.jpg" alt=""></div>
@@ -471,7 +471,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Jeremy Khoo</h3>
           <p>고문</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#brandon" class="open-popup-link">
           <div class="circle-team">
@@ -520,7 +520,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>매니징 컨설턴트</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+     <!--  <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#vincent" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-vincent.jpg" alt=""></div>
@@ -531,7 +531,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Vincent Lee</h3>
           <p>공인 회계사</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.9s">
         <a href="#coco" class="open-popup-link">
             <div class="circle-team">
@@ -568,7 +568,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>프로젝트 매니저</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+      <!-- <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#jordan" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-jordan.jpg" alt=""></div>
@@ -579,7 +579,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Jordan Ng</h3>
           <p>콘텐츠 마케팅 임원</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#tien" class="open-popup-link">
           <div class="circle-team">
@@ -1000,7 +1000,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br><br>
   <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
 </div>
-<div id="jeremy" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="jeremy" class="white-popup big-popup mfp-hide sans">
   <h2>Jeremy Khoo</h2>
   <h3>매니징 파트너</h3>
   <br><br>
@@ -1011,7 +1011,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Jeremy는 소매 블록체인 MegaX와 암호화폐의 대량 사용을 선도하는 Crypto-E-Commerce 매장인 Megaxstore를 공동 설립했습니다. 그는 또한 Consentium, Spiking, Bountie, Viola, Vanig 및 W Pay와 같은 40가지 이상의 흥미 진진한 블록체인 프로젝트를 조언하고 구축하는 데 시간을 할애합니다. Jeremy는 VeChain ICO 파트너로서 연설자, 교육자 및 투자자로서 블록체인 개발에 관여해 왔습니다.</p>
   <br>
   <p>Jeremy는 싱가포르 난양공대에서 기계공학 학사 학위를 취득했으며 싱가포르 공군에서 장교로 근무하던 중 명예 훈장을 받았습니다.</p>
-</div>
+</div> -->
 <div id="brandon" class="white-popup big-popup mfp-hide sans">
   <h2>Brandon Lee</h2>
   <h3>General Manager (Korea)</h3>
@@ -1055,12 +1055,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>제품 개발 및 마케팅으로 커리어를 시작한 Irwin은 보안 기술 업체인 i-Sprint Innovations에서 근무했습니다. 그는 근무기간 동안 14개 이상의 제품을 출시하고 두 차례의 인수를 진행했습니다. 그는 SEA 전역에 투자를 진행하는 벤처 캐피탈 펀드인 Rimu 그룹의 공동 설립자입니다. Irwin은 싱가포르 비디오 프로덕션 기업인 Rockstagvid에서 사업 개발 및 운영을 담당한 총괄 매니저였으며 3개의 하이퍼로컬(잘 정의 된 커뮤니티를 중심으로 한 정보이며 커뮤니티의 주요 관심사를 대상으로 함) 미디어 자산을 구축했습니다.</p>
 </div>
 
-<div id="vincent" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="vincent" class="white-popup big-popup mfp-hide sans">
   <h2>Vincent Lee</h2>
   <h3>공인 회계사</h3>
   <br><br>
   <p>Vincent는 20년 이상의 업계 경력을 가진 공인 회계사입니다. 그는 또한 싱가포르 펠로우(Fellow) 공인 회계사입니다. 그는 싱가포르에서 14번째로 큰 회계 법인의 공동 설립자였습니다. Ernst & Young에서 경력을 시작한 그는 항공, 제조, 무역, 에너지, 대형 자선 단체 및 비영리 단체, 전자 상거래 및 핀테크, 부동산 개발 및 투자 등 다양한 산업 분야에서 상장기업 및 비상장기업에 대한 감사, 실사 검토 및 사업 평가를 전문으로 하고 있습니다.</p>
-</div>
+</div> -->
 
 <div id="coco" class="white-popup big-popup mfp-hide sans">
   <h2>Coco Ong</h2>
@@ -1092,7 +1092,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Victor Chow는 벤처 캐피탈, 스타트업, 통신, ICT, 암호화 펀드, 금융 및 블록체인 기술 분야를 거치고 최근 사업 투자자로 전환한 28년 이상의 경력을 가진 기업가이자 시니어 기업 리더입니다. Novum Capital의 최고 투자 책임자(CIO)로서 딜 소싱, M&A 활동 및 투자를 담당합니다. Victor는 아시아 태평양, 유럽 및 북미 지역의 전반적인 관리, 전략 기획, 비즈니스 개발, 세일즈, 마케팅 및 글로벌 운영 관리 분야에서 최고 책임자를 맡았습니다. 그는 앞서 싱가포르에 본사를 둔 Fintech Accelerator INSPIRASIA의 창립 CEO였으며, Life SREDA VC Fintech에 초점을 맞춘 펀드의 아시아 본부장이었습니다. 그는 중국 선전에 본사를 둔 선도적인 글로벌 정보통신 기술 회사인 Huawei Technologies의 클라우드 컴퓨팅과 NextGen 데이터 센터의 글로벌 COO로서 기여한 공로는 IT 업계에서 잘 알려져 있습니다. 현재 Victor는 Fatfish Blockchain, Limited(ASX 상장 기술 벤처 기업)의 벤처 파트너이며, ICOWorld Exchange의 창립자, IDACB(International Decentralized Association of Cryptocurrency and Blockchains)의 수석 고문입니다.</p>
 </div>
 
-<div id="jordan" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="jordan" class="white-popup big-popup mfp-hide sans">
   <h2>Jordan Ng</h2>
   <h3>컨텐츠 마케팅 이사</h3>
   <br><br>
@@ -1100,7 +1100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br>
   <p>Jordan은 RMIT 대학에서 마케팅 비즈니스를 전공했습니다. 대학 스포츠 팀의 주장이기도 했던 Jordan은 강인함, 기강, 위대한 동지애로 존경 받고 있습니다. 경쟁적인 스포츠에서 그의 주장 및 팀원으로서의 경험들은 리더십, 탁월함, 그리고 한발 물러설 줄 아는 능력을 발휘할 수 있는 이상적인 기술을 얻었습니다.</p>
 </div>
-
+ -->
 <div id="tien" class="white-popup big-popup mfp-hide sans">
   <h2>Tien Trung</h2>
   <h3>Software Engineer</h3>
