--- a/index-zh.html
+++ b/index-zh.html
@@ -459,7 +459,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>General Counsel</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+      <!-- <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#jeremy" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-jeremy.jpg" alt=""></div>
@@ -470,7 +470,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Jeremy Khoo</h3>
           <p>顾问</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#brandon" class="open-popup-link">
           <div class="circle-team">
@@ -519,7 +519,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>管理顾问</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+      <!-- <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#vincent" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-vincent.jpg" alt=""></div>
@@ -530,7 +530,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Vincent Lee</h3>
           <p>公众会计</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.9s">
         <a href="#coco" class="open-popup-link">
             <div class="circle-team">
@@ -567,7 +567,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>项目经理</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+     <!--  <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#jordan" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-jordan.jpg" alt=""></div>
@@ -578,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Jordan Ng</h3>
           <p>内容营销主管</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#tien" class="open-popup-link">
           <div class="circle-team">
@@ -1014,7 +1014,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <br><br>
   <p>Patrick is a lawyer and was called to the Singapore Bar in 2005. Specializing in blockchain technology law, he was previously with one of Singapore’s top blockchain technology law firms.He analyzes and manages legal risks related to cryptocurrency trading and his writing is regularly featured in leading publications.</p>
 </div>
-<div id="jeremy" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="jeremy" class="white-popup big-popup mfp-hide sans">
   <h2>Jeremy Khoo</h2>
   <h3>管理伙伴</h3>
   <br><br>
@@ -1025,7 +1025,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Jeremy共同创立了零售区块链MegaX公司以及Crypto网络商店Megaxstore，该商店引领着大规模采用加密货币的潮流。他还花时间建议开展并亲自建立了40多个令人兴奋的区块链项目，如Consentium、Spiking、Bountie、Viola、Vanig和W Pay。 Jeremy是VeChain ICO是合伙人，也是区块链开发方面的演讲家、教育家和投资人。</p>
   <br>
   <p>Jeremy在新加坡南洋理工大学获得机械工程学士学位，并在新加坡共和国空军军官调试期间荣获著名的荣誉之剑。</p>
-</div>
+</div> -->
 <div id="brandon" class="white-popup big-popup mfp-hide sans">
   <h2>Brandon Lee</h2>
   <h3>General Manager (Korea)</h3>
@@ -1069,12 +1069,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Irwin最早从事产品开发和营销工作，他曾在安保技术公司i-Sprint Innovations的工作。在他那些年里，他帮助推出了超过14种产品，并进行了两轮收购。他是Rimu Group的联合创始人，Rimu Group是一家投资SEA的风险投资基金。 Irwin还是新加坡视频制作公司Rockstagvid的业务开发和运营总经理，并建立了3个超本地媒体资产。</p>
 </div>
 
-<div id="vincent" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="vincent" class="white-popup big-popup mfp-hide sans">
   <h2>Vincent Lee</h2>
   <h3>公众会计</h3>
   <br><br>
   <p>Vincent是一名拥有20多年行业经验的公共会计师。他也是新加坡特许会计师。过去她是一家会计师事务所的联合创始人，他帮助建立了新加坡第14大会计师事务所。在安永开始其职业生涯后，他的专业领域包括针对上市和非上市公司的审计、尽职调查和业务估值，并且其工作涉及多个行业，包括航空、制造、贸易、能源、大型慈善机构和非利润组织、电子商务和金融科技。房地产开发和投资控股。</p>
-</div>
+</div> -->
 
 <div id="coco" class="white-popup big-popup mfp-hide sans">
   <h2>Coco Ong</h2>
@@ -1106,14 +1106,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Victor Chow是一位连续创业家，也是高级企业领导者，在风险投资、初创企业、电信、ICT、密码、金融和区块链技术以及商业投资人方面拥有超过28年的经验。作为Novum的首席投资官，他负责交易采购、并购活动和投资活动。 Victor曾在亚太、欧洲和北美的综合管理、战略规划、业务开发、销售、营销和全球运营管理方面担任过C级职位。他曾担任新加坡Fintech Accelerator INSPIRASIA的创始首席执行官，并担任Life.SREDA VC Fintech专注基金方面的亚洲区负责人。他作为华为技术有限公司NextGen数据中心云计算的全球首席运营官，是IT行业最知名的人士之一，华为是全球领先的信息和通信技术公司，位于中国深圳。目前，Victor还是Fatfish Blockchain Limited的风险合作伙伴，该公司是ASX上市的技术风险投资商，也是ICOWorld Exchange的创始人和国际权力下放的国际数字货币和区块链去中心化协会（IDACB）的高级顾问。</p>
 </div>
 
-<div id="jordan" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="jordan" class="white-popup big-popup mfp-hide sans">
   <h2>Jordan Ng</h2>
   <h3>内容营销主管</h3>
   <br><br>
   <p>Jordan曾在Sakae Fintech担任市场营销主管时，这段经历给他带来了宝贵的相关经验。他完成的一个主要项目包括两个网站的概念化、设计和内容输出。</p>
   <br>
   <p>Jordan毕业于墨尔本皇家理工大学，并获得了市场营销学士学位。作为大学体育队的队长，Jordan因其坚韧不拔、纪律严明以及与球队的良好友情而备受尊重。作为队长的他和队员们在竞技体育方面多年的经验为他赢得了领导力、卓越性和韧性等理想能力。</p>
-</div>
+</div> -->
 
 <div id="tien" class="white-popup big-popup mfp-hide sans">
   <h2>Tien Trung</h2>
