--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Associate Partner</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+      <!-- <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#vincent" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-vincent.jpg" alt=""></div>
@@ -578,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Vincent Lee</h3>
           <p>Public Accountant</p>
         </div>
-      </div>
+      </div> -->
       
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.9s">
         <a href="#coco" class="open-popup-link">
@@ -616,7 +616,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Project Manager</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+     <!--  <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#jordan" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-jordan.jpg" alt=""></div>
@@ -627,7 +627,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3>Jordan Ng</h3>
           <p>Content Marketing Executive</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
         <a href="#tien" class="open-popup-link">
           <div class="circle-team">
@@ -1124,13 +1124,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Starting his career in product development and marketing, Irwin was at i-Sprint Innovations, a security tech firm. During his time, he helped launched more than fourteen products and went through two rounds of acquisitions. He was cofounder at Rimu Group, a venture capital fund which invests across SEA. Irwin was also General Manager responsible for business development and operations at Rockstagvid, a Singaporean video production firm and built 3 hyperlocal media assets.</p>
 </div>
 
-<div id="vincent" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="vincent" class="white-popup big-popup mfp-hide sans">
   <h2>Vincent Lee</h2>
   <h3>Public Consultant</h3>
   <br><br>
   <p>Vincent is a Public Accountant with over 20 years of industry experience. He is also a Fellow Chartered Accountant of Singapore. He was previously a co-founder of an accounting firm which he helped build to become the 14th largest accounting firm in Singapore. Having begun his career at Ernst & Young, his area of expertise includes audits, due diligence reviews and business valuations for listed and non-listed companies, in a diverse range of industries including aviation, manufacturing, trading, energy, large charities and non-profit organisations, e-commerce and fintech, property development and investment holdings.</p>
 </div>
-
+ -->
 
 
 <div id="coco" class="white-popup big-popup mfp-hide sans">
@@ -1170,14 +1170,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Victor Chow is a serial entrepreneur and senior corporate leader with over 28 years’ experience working in venture capital, start-ups, telecommunications, ICT, cryptofunds, financial & blockchain technologies, and most recently turned business investor. As Novum's Chief Investment Officer, he is responsible for deal-sourcing, M&A activities and investments. Victor has held C-level positions across general management, strategic planning, business development, sales, marketing and global operations management in Asia Pacific, Europe and North America. He was previously the Founding CEO of Singapore-based Fintech Accelerator INSPIRASIA and was Head of Asia for Life.SREDA VC Fintech-focused fund. He was most renowned in the IT industry for his contributions as the Global Chief Operating Officer COO for Cloud Computing and NextGen Data Centers of Huawei Technologies, a leading global information and communications technology company based in Shen Zhen China. Currently, Victor is also the Venture Partner of Fatfish Blockchain Limited - an ASX listed technology venture builder and Founder of ICOWorld Exchange and Senior Advisor to the International Decentralized Association of Cryptocurrency and Blockchains (IDACB).</p>
 </div>
 
-<div id="jordan" class="white-popup big-popup mfp-hide sans">
+<!-- <div id="jordan" class="white-popup big-popup mfp-hide sans">
   <h2>Jordan Ng</h2>
   <h3>Content Marketing Executive</h3>
   <br><br>
   <p>Jordan brings valuable and relevant experience from his prior role at Sakae Fintech as a Marketing Executive. One of the major projects he completed included conceptualising, designing and content writing for two websites.</p>
   <br>
   <p>Jordan graduated from RMIT University with Bachelor of Business in Marketing. Being the captain of the university sports team, Jordan is respected for his tenacity, discipline and for having great camaraderie with his team. His years of experience in a competitive sport as a captain and follower earned him the ideal skills to demonstrate leadership, excellence and the ability to step back.</p>
-</div>
+</div> -->
 
 <div id="tien" class="white-popup big-popup mfp-hide sans">
   <h2>Tien Trung</h2>
